Fixed login logout text flickering issue

--- a/src/Components/navbar.css
+++ b/src/Components/navbar.css
@@ -20,6 +20,15 @@
     max-width: 1000px;
 }
 
+.navbar li {
+    text-decoration: none;
+    color: #000000;
+    transition: color 0.3s ease;
+    font-size: large;
+    font-weight: 500;
+    cursor: pointer;
+}
+
 .navbar a {
     text-decoration: none;
     color: #000000;
